Fix #myFeedback for firefox
For me on latest firefox the #myFeedback gets rendered off-screen.
This is not a very nice fix but it works and looks good in chromium...
(maybe there is a better way to achieve this)

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -264,6 +264,9 @@ a:hover {
   color:#fff;
 }
 
+#myFeedback > .carousel-inner {
+  overflow: visible;
+}
 .carousel-control.carousel-color-none {
   background-image: none;
 }
